--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "private": true,
   "scripts": {
     "dev": "astro dev",
+    "dev:server": "node scripts/dev-server.mjs start",
+    "dev:stop": "node scripts/dev-server.mjs stop",
+    "dev:restart": "node scripts/dev-server.mjs restart",
+    "dev:status": "node scripts/dev-server.mjs status",
+    "dev:logs": "node scripts/dev-server.mjs logs",
     "build": "astro build",
     "preview": "astro preview",
-    "test": "node --test test/",
+    "test": "node --test test/*.test.js",
     "generate-illustrations": "node scripts/generate-illustrations.js",
     "generate-illustrations:dry-run": "node scripts/generate-illustrations.js --dry-run",
-    "generate-word-translations": "node scripts/generate-word-translations.js"
+    "generate-word-translations": "node scripts/generate-word-translations.js",
+    "generate-showcase": "node scripts/generate-showcase-variants.js",
+    "generate-showcase:dry-run": "node scripts/generate-showcase-variants.js --dry-run",
+    "generate-marketing-localizations": "node scripts/generate-marketing-localizations.js",
+    "generate-marketing-localizations:dry-run": "node scripts/generate-marketing-localizations.js --dry-run"
   },
   "dependencies": {
     "astro": "^5.2.0"
